--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -28,7 +28,8 @@
             ],
             "styles": [
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/slim-select/dist/slimselect.min.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
