--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,13 +21,15 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^5.0.2",
     "rxjs": "~6.6.0",
+    "slim-select": "^1.27.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.3",
-    "@angular/cli": "~12.1.3",
+    "@angular-devkit/build-angular": "~12.2.7",
+    "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.1.0-",
+    "@types/bootstrap": "^5.1.6",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
