--- a/clinic-frontend/package.json
+++ b/clinic-frontend/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
     "rxjs": "~7.4.0",
+    "slim-select": "^1.27.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
