--- a/clinic-frontend/package.json
+++ b/clinic-frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.0.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@popperjs/core": "^2.11.0",
+    "@types/bootstrap": "^5.1.8",
     "bootstrap": "^5.1.3",
     "rxjs": "~7.4.0",
     "slim-select": "^1.27.1",
