--- a/clinic-frontend/angular.json
+++ b/clinic-frontend/angular.json
@@ -34,8 +34,7 @@
               "src/styles/styles.scss"
             ],
             "scripts": [
-              "./node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
