--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -1,11 +1,10 @@
 FROM node:18.14-bullseye-slim
 
 RUN npm install -g @angular/cli@13 @angular/core@13
-RUN npm install -g npm
 RUN mkdir /frontend && chown node:node /frontend
 RUN mkdir /frontend/node_modules && chown node:node /frontend/node_modules
 WORKDIR  /frontend
 USER node
-COPY --chown=node:node ./frontend/package.json ./frontend/package-lock.json ./
-RUN npm ci --quiet
+COPY --chown=node:node package*.json ./
+RUN npm install --include=dev
 COPY --chown=node:node . .
