--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,14 @@
     "express": "~4.16.1",
     "http-errors": "^1.6.3",
     "joi": "^17.4.0",
+    "joi-to-openapi-definition": "^0.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "mongoose-paginate-v2": "^1.4.1",
     "mongoose-slug-generator": "^1.0.4",
     "nodemailer": "^6.6.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0",
     "uuid": "^8.3.2",
     "validator": "^13.6.0",
     "winston": "^3.3.3"
