--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "express": "~4.16.1",
     "http-errors": "^1.6.3",
     "joi": "^17.4.0",
-    "joi-to-openapi-definition": "^0.1.1",
+    "joi-to-json": "^3.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "mongoose-paginate-v2": "^1.4.1",
