--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.13.2",
     "mongoose-paginate-v2": "^1.4.1",
     "mongoose-slug-generator": "^1.0.4",
+    "mongoose-slug-plugin": "^2.1.0",
     "nodemailer": "^6.6.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0",
